--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "pbmedia/laravel-ffmpeg": "^7.5",
         "php-ffmpeg/php-ffmpeg": "^0.17.0"
     },
     "require-dev": {
