--- a/docker/prod/nginx.conf
+++ b/docker/prod/nginx.conf
@@ -1,4 +1,6 @@
 server {
+	server_tokens off;
+
     listen 80;
     root /var/www/html/public;
 
@@ -10,6 +12,12 @@ server {
 
     charset utf-8;
     client_max_body_size 10M;
+
+    location /stream/ {
+        disable_symlinks off;
+		default_type video/mp4;
+        alias /data/;
+    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
